--- a/class-forest-tests/CMakeLists.txt
+++ b/class-forest-tests/CMakeLists.txt
@@ -1,15 +1,20 @@
 set(LLVM_LINK_COMPONENTS
-  Support
+  support
+  )
+
+include_directories(
+  ${CMAKE_CURRENT_SOURCE_DIR}/../
   )
 
 add_extra_unittest(class-forest-tests
   class_forest_tests.cpp
+  ../ClassForestVisitor.cpp
   )
 
 target_link_libraries(class-forest-tests
   clangAST
   clangASTMatchers
-  clangBasic
-  clangFrontend
+  clangDynamicASTMatchers
+  clangQuery
   clangTooling
   )
